--- a/vue-tailwind-starter/package.json
+++ b/vue-tailwind-starter/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "express": "^4.18.2",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
@@ -19,5 +20,10 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "vue-cli-plugin-tailwind": "~3.0.0"
-  }
+  },
+  "description": "## Project setup ``` pnpm install ```",
+  "main": "babel.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
